# MyGPT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  =3.20.0  CHANGELOG.md  CI_SETUP.md  CODEBASE_REVIEW.md  DATABASE_INDEXES.md  Dockerfile  IMPLEMENTATION_GUIDE.md  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-Did-yo-1729982021037.txt  Pasted-ERROR-app-Exception-on-login-GET-Traceback-most-recent-call-last-File-home-runner-Django-1729961935711.txt  README.md  TESTING.md  app.py  chat_handler.py  db_add_indexes.py  db_migrate.py  email_handler.py  gunicorn_config.py  main.py  models.py  multi_provider_chat_handler.py  pyproject.toml  requirements.txt  routes.py  schemas.py  security.py  security_migration.py  test_indexes.py  test_runner.py
.github/workflows/: ci.yml
deployment/: .env.production
docs/: IMPLEMENTATION_GUIDE.md  README.md  README_REVIEW_SUMMARY.md  RESTRUCTURE_GUIDE.md  TECHNICAL_DEBT_ANALYSIS.md
docs/development-assets/: replit.md
instance/: test.db
logs/: app.log.1  app.log.10  app.log.2  app.log.3  app.log.4  app.log.5  app.log.6  app.log.7  app.log.8  app.log.9
scripts/: db_migrate.py  setup-dev.sh  test_runner.py
src/mygpt/: __init__.py  app.py  cli.py  models.py  routes.py
src/mygpt/config/: __init__.py  settings.py
src/mygpt/schemas/: __init__.py  validation_schemas.py
src/mygpt/services/: __init__.py  email_handler.py
static/css/: auth.css  saas.css  settings.css  style.css
static/js/: chat.js
templates/: 404.html  500.html  admin.html  base.html  chat.html  dashboard.html  forgot_password.html  login.html  pending_approval.html  register.html  reset_password.html  saas_base.html  settings.html
templates/errors/: 404.html  429.html  500.html
tests/: __init__.py  conftest.py  test_app.py  test_chat_handler.py  test_models.py  test_routes_utils.py
