[project]
name = "repl-nix-djangogptchathistory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "openai>=1.52.2",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "sqlalchemy",
    "sendgrid>=6.11.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
    "waitress>=3.0.0",
    "anthropic>=0.66.0",
    "google-generativeai>=0.8.5",
    "mistralai>=1.9.10",
    "werkzeug>=3.0.6",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-flask>=1.3.0",
    "marshmallow>=3.20.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/migrations/*",
    "*/site-packages/*",
    ".replit",
    "replit.nix",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
