[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mygpt"
version = "0.1.0"
description = "AI Chat Assistant application built with Flask"
readme = "docs/README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CodeHalwell", email = "danielhalwell@gmail.com"},
]
maintainers = [
    {name = "CodeHalwell", email = "danielhalwell@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["flask", "ai", "chatbot", "gpt", "claude", "gemini"]
requires-python = ">=3.11"
dependencies = [
    # Core Flask dependencies
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "flask-login>=0.6.3",
    "werkzeug>=3.0.6",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    # AI Providers
    "openai>=1.56.1",
    "anthropic>=0.66.0",
    "google-generativeai>=0.8.5",
    "mistralai>=1.9.10",
    # Email and validation
    "sendgrid>=6.11.0",
    "email-validator>=2.2.0",
    "marshmallow>=3.20.0",
    # Production servers and middleware
    "gunicorn>=23.0.0",
    "waitress>=3.0.0",
    "whitenoise>=6.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.11.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    
    # Development tools
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/CodeHalwell/MyGPT"
Documentation = "https://github.com/CodeHalwell/MyGPT/tree/main/docs"
Repository = "https://github.com/CodeHalwell/MyGPT"
"Bug Tracker" = "https://github.com/CodeHalwell/MyGPT/issues"

[project.scripts]
mygpt = "mygpt.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/mygpt"]

[tool.hatchling.build.sources]
"src" = ""

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/migrations/*",
    "*/site-packages/*",
    ".replit",
    "replit.nix",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
